--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,4 +1,7 @@
+           187-Mod
 ********Venom Changelog***********
+        The~Skater~187
+
 *Initial Release (With Huge Help To Lord Boeffla)
 *Modified some scripting
 *Changed ZRAM compression to LZO
